@@ -1,13 +1,11 @@
 package com.idtech.item.custom;
 
-import com.idtech.BaseMod;
 import com.idtech.entity.custom.FriendlyCreeperEntity;
 import net.minecraft.core.BlockPos;
 import net.minecraft.world.InteractionHand;
 import net.minecraft.world.InteractionResultHolder;
 import net.minecraft.world.entity.Entity;
 import net.minecraft.world.entity.LivingEntity;
-import net.minecraft.world.entity.MobCategory;
 import net.minecraft.world.entity.monster.Creeper;
 import net.minecraft.world.entity.player.Player;
 import net.minecraft.world.item.Item;
@@ -33,7 +31,7 @@ public class DetonatorItem extends Item {
                 pPlayer.getBoundingBox().inflate(10.0))
                 .filter( (bs) -> pLevel.getBlockState(bs).is(Blocks.TNT))
                 .map(BlockPos::immutable)
-                .collect(Collectors.toList());
+                .toList();
         if (blocks.size() > 0){
             success = true;
             for (BlockPos bp : blocks){
